FIP Data import

--- a/notebooks/FIP_RCA_SKU.ipynb
+++ b/notebooks/FIP_RCA_SKU.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "42b545f3-c489-46e0-8cc3-bb06791d0a6d",
    "metadata": {},
    "outputs": [
@@ -62,8 +62,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1279012</td>\n",
-       "      <td>1721</td>\n",
+       "      <td>1217818</td>\n",
+       "      <td>1622</td>\n",
        "      <td>202612</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -71,21 +71,21 @@
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>sap</td>\n",
-       "      <td>Cefepime</td>\n",
-       "      <td>PACK</td>\n",
+       "      <td>Tempra</td>\n",
+       "      <td>RAW</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
        "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>02601270</td>\n",
+       "      <td>04506130</td>\n",
        "      <td>PHARMA</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
+       "      <td>2025-12-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1192660A1</td>\n",
-       "      <td>1610</td>\n",
+       "      <td>1231993</td>\n",
+       "      <td>1557</td>\n",
        "      <td>202612</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -93,125 +93,125 @@
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>sap</td>\n",
-       "      <td>All Other Pharmaceut</td>\n",
-       "      <td>PACK</td>\n",
+       "      <td>Aripiprazole</td>\n",
+       "      <td>HALB</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
        "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>00201790</td>\n",
+       "      <td>02701577</td>\n",
        "      <td>PHARMA</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
+       "      <td>2025-12-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1192764A3</td>\n",
-       "      <td>1610</td>\n",
-       "      <td>202612</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>sap</td>\n",
-       "      <td>Carboplatin</td>\n",
-       "      <td>PACK</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>03301420</td>\n",
-       "      <td>PHARMA</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1279202</td>\n",
+       "      <td>1416303</td>\n",
        "      <td>1721</td>\n",
        "      <td>202612</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>1.321201</td>\n",
        "      <td>sap</td>\n",
        "      <td>Metformin</td>\n",
-       "      <td>PACK</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>MARKET UNIT</td>\n",
+       "      <td>SINGLE PRODUCT</td>\n",
+       "      <td>TABLET</td>\n",
        "      <td>00221118</td>\n",
        "      <td>PHARMA</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
+       "      <td>2025-12-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1192867A4</td>\n",
-       "      <td>1610</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1335676</td>\n",
+       "      <td>1487</td>\n",
        "      <td>202612</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>990.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>missing</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>sap</td>\n",
-       "      <td>Didanosine</td>\n",
-       "      <td>PACK</td>\n",
        "      <td>nan</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>CLINICAL</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
        "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>02201381</td>\n",
+       "      <td>None</td>\n",
        "      <td>PHARMA</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1345028</td>\n",
+       "      <td>1487</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>missing</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>CLINICAL</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
+       "      <td>OTHER PROCESS MATERIALS</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>PHARMA</td>\n",
+       "      <td>friday</td>\n",
+       "      <td>2025-12-05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    material plant    date  quantity  total_cost concost_source  \\\n",
-       "0    1279012  1721  202612       0.0         0.0        missing   \n",
-       "1  1192660A1  1610  202612       0.0         0.0        missing   \n",
-       "2  1192764A3  1610  202612       0.0         0.0        missing   \n",
-       "3    1279202  1721  202612       0.0         0.0        missing   \n",
-       "4  1192867A4  1610  202612       0.0         0.0        missing   \n",
+       "  material plant    date  quantity  total_cost concost_source unit_of_measure  \\\n",
+       "0  1217818  1622  202612       0.0         0.0        missing            None   \n",
+       "1  1231993  1557  202612       0.0         0.0        missing            None   \n",
+       "2  1416303  1721  202612       0.0         0.0     concost dp              ST   \n",
+       "3  1335676  1487  202612     990.0         0.0        missing            None   \n",
+       "4  1345028  1487  202612      32.0         0.0        missing            None   \n",
        "\n",
-       "  unit_of_measure  cost_per_unit source       corporate_brand material_type  \\\n",
-       "0            None            NaN    sap              Cefepime          PACK   \n",
-       "1            None            NaN    sap  All Other Pharmaceut          PACK   \n",
-       "2            None            NaN    sap           Carboplatin          PACK   \n",
-       "3            None            NaN    sap             Metformin          PACK   \n",
-       "4            None            NaN    sap            Didanosine          PACK   \n",
+       "   cost_per_unit source corporate_brand material_type  \\\n",
+       "0            NaN    sap          Tempra           RAW   \n",
+       "1            NaN    sap    Aripiprazole          HALB   \n",
+       "2       1.321201    sap       Metformin           FIN   \n",
+       "3            NaN    sap             nan           FIN   \n",
+       "4            NaN    sap             nan           FIN   \n",
        "\n",
-       "  development_lifecycle_status enterprise_category enterprise_sub_category  \\\n",
-       "0                          nan                 nan                     nan   \n",
-       "1                          nan                 nan                     nan   \n",
-       "2                          nan                 nan                     nan   \n",
-       "3                          nan                 nan                     nan   \n",
-       "4                          nan                 nan                     nan   \n",
+       "  development_lifecycle_status      enterprise_category  \\\n",
+       "0                   COMMERCIAL             RAW MATERIAL   \n",
+       "1                   COMMERCIAL  OTHER PROCESS MATERIALS   \n",
+       "2                   COMMERCIAL              MARKET UNIT   \n",
+       "3                     CLINICAL  OTHER PROCESS MATERIALS   \n",
+       "4                     CLINICAL  OTHER PROCESS MATERIALS   \n",
        "\n",
-       "  dosage_form_parent corp_brand_id network_or_business_unit snapshot_type  \\\n",
-       "0                nan      02601270                   PHARMA        friday   \n",
-       "1                nan      00201790                   PHARMA        friday   \n",
-       "2                nan      03301420                   PHARMA        friday   \n",
-       "3                nan      00221118                   PHARMA        friday   \n",
-       "4                nan      02201381                   PHARMA        friday   \n",
+       "   enterprise_sub_category dosage_form_parent corp_brand_id  \\\n",
+       "0             RAW MATERIAL                nan      04506130   \n",
+       "1  OTHER PROCESS MATERIALS                nan      02701577   \n",
+       "2           SINGLE PRODUCT             TABLET      00221118   \n",
+       "3  OTHER PROCESS MATERIALS                nan          None   \n",
+       "4  OTHER PROCESS MATERIALS                nan          None   \n",
        "\n",
-       "  snapshot_date  \n",
-       "0    2026-01-23  \n",
-       "1    2026-01-23  \n",
-       "2    2026-01-23  \n",
-       "3    2026-01-23  \n",
-       "4    2026-01-23  "
+       "  network_or_business_unit snapshot_type snapshot_date  \n",
+       "0                   PHARMA        friday    2025-12-05  \n",
+       "1                   PHARMA        friday    2025-12-05  \n",
+       "2                   PHARMA        friday    2025-12-05  \n",
+       "3                   PHARMA        friday    2025-12-05  \n",
+       "4                   PHARMA        friday    2025-12-05  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
     "\n",
     "table = dataset.to_table(\n",
     "    filter=(\n",
-    "        (ds.field(\"snapshot_date\") == \"2026-01-23\") &\n",
+    "        (ds.field(\"snapshot_date\") >= \"2025-12-01\") &\n",
     "        (ds.field(\"date\") == \"202612\")\n",
     "    )\n",
     ")\n",
