FIP Data import

--- a/notebooks/FIP_RCA_SKU.ipynb
+++ b/notebooks/FIP_RCA_SKU.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "1ba40ac6-63d8-4e24-b28d-fcc668ccb805",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pyarrow.dataset as ds"
+    "import pyarrow.dataset as ds\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5d3b6d5-9d72-4f5e-a5b6-10bf19fb47bd",
+   "metadata": {},
+   "source": [
+    "## Dataset Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "42b545f3-c489-46e0-8cc3-bb06791d0a6d",
    "metadata": {},
    "outputs": [
@@ -211,7 +220,7 @@
        "4                   PHARMA        friday    2025-12-05  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,21 +228,25 @@
    "source": [
     "# Import FIP Dataset\n",
     "\n",
-    "s3_path = (\n",
+    "s3_path_fip = (\n",
     "    \"s3://m3-intel-hub-dp-us-east-1-517292-prod/\"\n",
     "    \"publish/data-product/financial_inventory_projection_report_network_update/\"\n",
     ")\n",
     "\n",
     "dataset = ds.dataset(\n",
-    "    s3_path,\n",
+    "    s3_path_fip,\n",
     "    format=\"parquet\",\n",
     "    partitioning=\"hive\" \n",
     ")\n",
     "\n",
     "table = dataset.to_table(\n",
     "    filter=(\n",
-    "        (ds.field(\"snapshot_date\") >= \"2025-12-01\") &\n",
-    "        (ds.field(\"date\") == \"202612\")\n",
+    "        (ds.field(\"snapshot_date\") >= \"2025-12-01\") &       # data after dec 2025\n",
+    "        (ds.field(\"date\") == \"202612\") &                    # filter only 2026 YE FIP data\n",
+    "        ~(\n",
+    "            (ds.field(\"snapshot_date\") == \"2026-01-23\") &\n",
+    "            (ds.field(\"snapshot_type\") == \"friday\")         # drop 23rd Fri snapshot data to avoid double counting\n",
+    "        )\n",
     "    )\n",
     ")\n",
     "\n",
@@ -243,8 +256,263 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "55e41c07-e254-4299-9e5b-eb7c6b9fce70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(385660, 19)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fip.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a84b8229-ade6-433f-a79c-d3b9b1330ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# s3_path_plants = (\n",
+    "#     \"s3://m3-intel-hub-dp-us-east-1-517292-prod/\"\n",
+    "#     \"refined/data-asset/fin_inv_proj/\"\n",
+    "#     \"bms_internal_vs_external_plants/\"\n",
+    "#     \"bms_internal_vs_external_plants.parquet\"\n",
+    "# )\n",
+    "\n",
+    "# df_plants = pd.read_parquet(s3_path_plants)\n",
+    "# # df_plants.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2cabadef-eccf-486e-8ecf-241ae4d531ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import boto3\n",
+    "\n",
+    "# s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "# bucket = \"m3-intel-hub-dp-us-east-1-517292-prod\"\n",
+    "# prefix = \"refined/data-asset/fin_inv_proj/sap_material_master/\"\n",
+    "\n",
+    "# response = s3.list_objects_v2(\n",
+    "#     Bucket=bucket,\n",
+    "#     Prefix=prefix\n",
+    "# )\n",
+    "\n",
+    "# if \"Contents\" in response:\n",
+    "#     for obj in response[\"Contents\"]:\n",
+    "#         print(obj[\"Key\"], obj[\"Size\"])\n",
+    "# else:\n",
+    "#     print(\"No objects found or no access.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfe055ce-26b4-4a86-9090-6878863394c9",
+   "metadata": {},
+   "source": [
+    "## Data Prep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d2f9b248-42d0-415e-9f57-473547a438d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create has_non_zero flag at material–plant level\n",
+    "\n",
+    "df_fip[\"has_non_zero\"] = (\n",
+    "    df_fip\n",
+    "    .groupby([\"material\", \"plant\"])[\"total_cost\"]\n",
+    "    .transform(lambda x: (x != 0).any())\n",
+    "    .astype(int)\n",
+    ")\n",
+    "\n",
+    "# Apply the filter\n",
+    "base = df_fip.loc[df_fip[\"has_non_zero\"] == 1].drop(columns=\"has_non_zero\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6ee4b04f-0c9b-4a2b-8658-f40b167b2b98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(423838, 20)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(101611, 19)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df_fip.shape)\n",
+    "base.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7937341f-fb66-4c8d-96a6-053c67c62c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df\n",
+    "df = base.copy()\n",
+    "df[\"snapshot_date\"] = pd.to_datetime(df[\"snapshot_date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c37ed8de-5c47-4166-98f0-5b8bff6ffde7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>snapshot_type</th>\n",
+       "      <th>snapshot_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>78159</th>\n",
+       "      <td>bd13</td>\n",
+       "      <td>2025-12-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347624</th>\n",
+       "      <td>bd13</td>\n",
+       "      <td>2026-01-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2025-12-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117174</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2025-12-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156266</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2025-12-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195322</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2026-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232451</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2026-01-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271376</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2026-01-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309446</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2026-01-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385802</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>2026-01-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       snapshot_type snapshot_date\n",
+       "78159           bd13    2025-12-17\n",
+       "347624          bd13    2026-01-23\n",
+       "332           friday    2025-12-05\n",
+       "39169         friday    2025-12-12\n",
+       "117174        friday    2025-12-19\n",
+       "156266        friday    2025-12-26\n",
+       "195322        friday    2026-01-02\n",
+       "232451        friday    2026-01-09\n",
+       "271376        friday    2026-01-16\n",
+       "309446        friday    2026-01-23\n",
+       "385802        friday    2026-01-30"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snapshot_calendar = (\n",
+    "    df[[\"snapshot_type\", \"snapshot_date\"]]\n",
+    "    .drop_duplicates()\n",
+    "    .sort_values([\"snapshot_type\", \"snapshot_date\"])\n",
+    ")\n",
+    "\n",
+    "snapshot_calendar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47f091ed-2669-4094-892c-98f44be1b5ff",
    "metadata": {},
    "outputs": [],
    "source": []
