--- a/notebooks/FIP_RCA_SKU.ipynb
+++ b/notebooks/FIP_RCA_SKU.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "d2f9b248-42d0-415e-9f57-473547a438d1",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "6ee4b04f-0c9b-4a2b-8658-f40b167b2b98",
    "metadata": {},
    "outputs": [
@@ -357,16 +357,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(423838, 20)\n"
+      "(385660, 20)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(101611, 19)"
+       "(92589, 19)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,20 +378,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "7937341f-fb66-4c8d-96a6-053c67c62c27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df\n",
+    "# fip copy df for data prep\n",
     "df = base.copy()\n",
-    "df[\"snapshot_date\"] = pd.to_datetime(df[\"snapshot_date\"])"
+    "df[\"snapshot_date\"] = pd.to_datetime(df[\"snapshot_date\"])\n",
+    "\n",
+    "\n",
+    "# snapshot lookup table\n",
+    "snapshot_calendar = (\n",
+    "    df[[\"snapshot_type\", \"snapshot_date\"]]\n",
+    "    .drop_duplicates()\n",
+    "    .sort_values([\"snapshot_type\", \"snapshot_date\"])\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# attach prev snapshot to snapshot calendar\n",
+    "snapshot_calendar[\"prev_snapshot_date\"] = (\n",
+    "    snapshot_calendar\n",
+    "    .groupby(\"snapshot_type\")[\"snapshot_date\"]\n",
+    "    .shift(1)\n",
+    ")\n",
+    "snapshot_calendar      # comparing bd13 - bd13 snapshots and friday-friday snapshots. no bd13-fri snapshots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c37ed8de-5c47-4166-98f0-5b8bff6ffde7",
+   "execution_count": 31,
+   "id": "36fb3fdb-8d6e-468e-a247-c1718679ffb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attach previous snapshot date to each row\n",
+    "\n",
+    "df = df.merge(\n",
+    "    snapshot_calendar,\n",
+    "    on=[\"snapshot_type\", \"snapshot_date\"],\n",
+    "    how=\"left\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ce293bf7-5df9-4d3b-a75c-3b324abcf50c",
    "metadata": {},
    "outputs": [
     {
@@ -415,104 +448,278 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>material</th>\n",
+       "      <th>plant</th>\n",
+       "      <th>date</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>total_cost</th>\n",
+       "      <th>concost_source</th>\n",
+       "      <th>unit_of_measure</th>\n",
+       "      <th>cost_per_unit</th>\n",
+       "      <th>source</th>\n",
+       "      <th>corporate_brand</th>\n",
+       "      <th>material_type</th>\n",
+       "      <th>development_lifecycle_status</th>\n",
+       "      <th>enterprise_category</th>\n",
+       "      <th>enterprise_sub_category</th>\n",
+       "      <th>dosage_form_parent</th>\n",
+       "      <th>corp_brand_id</th>\n",
+       "      <th>network_or_business_unit</th>\n",
        "      <th>snapshot_type</th>\n",
        "      <th>snapshot_date</th>\n",
+       "      <th>prev_snapshot_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>78159</th>\n",
-       "      <td>bd13</td>\n",
-       "      <td>2025-12-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347624</th>\n",
-       "      <td>bd13</td>\n",
-       "      <td>2026-01-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1278101</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>TH</td>\n",
+       "      <td>121.374929</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>Entecavir</td>\n",
+       "      <td>HALB</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>DRUG PRODUCT</td>\n",
+       "      <td>INTERMEDIATE</td>\n",
+       "      <td>TABLET</td>\n",
+       "      <td>02201397</td>\n",
+       "      <td>PHARMA</td>\n",
        "      <td>friday</td>\n",
        "      <td>2025-12-05</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39169</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1436539</td>\n",
+       "      <td>2071</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>67.21</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>1.430000</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>BREYANZI ((lisocabt)</td>\n",
+       "      <td>PACK</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>PACKAGE COMPONENT</td>\n",
+       "      <td>PACKAGE COMPONENT</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>03302160</td>\n",
+       "      <td>CTO</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2025-12-12</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117174</th>\n",
+       "      <th>2</th>\n",
+       "      <td>1436602</td>\n",
+       "      <td>2071</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>3877.0</td>\n",
+       "      <td>736.63</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>0.190000</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>BREYANZI ((lisocabt)</td>\n",
+       "      <td>PACK</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>PACKAGE COMPONENT</td>\n",
+       "      <td>PACKAGE COMPONENT</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>03302160</td>\n",
+       "      <td>CTO</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2025-12-19</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156266</th>\n",
+       "      <th>3</th>\n",
+       "      <td>1436617</td>\n",
+       "      <td>2071</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>BREYANZI ((lisocabt)</td>\n",
+       "      <td>RAW</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>03302160</td>\n",
+       "      <td>CTO</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2025-12-26</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195322</th>\n",
+       "      <th>4</th>\n",
+       "      <td>1436657</td>\n",
+       "      <td>2071</td>\n",
+       "      <td>202612</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>concost dp</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>sap</td>\n",
+       "      <td>BREYANZI ((lisocabt)</td>\n",
+       "      <td>RAW</td>\n",
+       "      <td>COMMERCIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
+       "      <td>RAW MATERIAL</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>03302160</td>\n",
+       "      <td>CTO</td>\n",
        "      <td>friday</td>\n",
-       "      <td>2026-01-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232451</th>\n",
-       "      <td>friday</td>\n",
-       "      <td>2026-01-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271376</th>\n",
-       "      <td>friday</td>\n",
-       "      <td>2026-01-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>309446</th>\n",
-       "      <td>friday</td>\n",
-       "      <td>2026-01-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>385802</th>\n",
-       "      <td>friday</td>\n",
-       "      <td>2026-01-30</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       snapshot_type snapshot_date\n",
-       "78159           bd13    2025-12-17\n",
-       "347624          bd13    2026-01-23\n",
-       "332           friday    2025-12-05\n",
-       "39169         friday    2025-12-12\n",
-       "117174        friday    2025-12-19\n",
-       "156266        friday    2025-12-26\n",
-       "195322        friday    2026-01-02\n",
-       "232451        friday    2026-01-09\n",
-       "271376        friday    2026-01-16\n",
-       "309446        friday    2026-01-23\n",
-       "385802        friday    2026-01-30"
+       "  material plant    date  quantity  total_cost concost_source unit_of_measure  \\\n",
+       "0  1278101  1721  202612       0.0        0.00     concost dp              TH   \n",
+       "1  1436539  2071  202612      47.0       67.21     concost dp              ST   \n",
+       "2  1436602  2071  202612    3877.0      736.63     concost dp              ST   \n",
+       "3  1436617  2071  202612     167.0        1.67     concost dp              ST   \n",
+       "4  1436657  2071  202612      20.0        0.20     concost dp              ST   \n",
+       "\n",
+       "   cost_per_unit source       corporate_brand material_type  \\\n",
+       "0     121.374929    sap             Entecavir          HALB   \n",
+       "1       1.430000    sap  BREYANZI ((lisocabt)          PACK   \n",
+       "2       0.190000    sap  BREYANZI ((lisocabt)          PACK   \n",
+       "3       0.010000    sap  BREYANZI ((lisocabt)           RAW   \n",
+       "4       0.010000    sap  BREYANZI ((lisocabt)           RAW   \n",
+       "\n",
+       "  development_lifecycle_status enterprise_category enterprise_sub_category  \\\n",
+       "0                   COMMERCIAL        DRUG PRODUCT            INTERMEDIATE   \n",
+       "1                          nan   PACKAGE COMPONENT       PACKAGE COMPONENT   \n",
+       "2                   COMMERCIAL   PACKAGE COMPONENT       PACKAGE COMPONENT   \n",
+       "3                   COMMERCIAL        RAW MATERIAL            RAW MATERIAL   \n",
+       "4                   COMMERCIAL        RAW MATERIAL            RAW MATERIAL   \n",
+       "\n",
+       "  dosage_form_parent corp_brand_id network_or_business_unit snapshot_type  \\\n",
+       "0             TABLET      02201397                   PHARMA        friday   \n",
+       "1                nan      03302160                      CTO        friday   \n",
+       "2                nan      03302160                      CTO        friday   \n",
+       "3                nan      03302160                      CTO        friday   \n",
+       "4                nan      03302160                      CTO        friday   \n",
+       "\n",
+       "  snapshot_date prev_snapshot_date  \n",
+       "0    2025-12-05                NaT  \n",
+       "1    2025-12-05                NaT  \n",
+       "2    2025-12-05                NaT  \n",
+       "3    2025-12-05                NaT  \n",
+       "4    2025-12-05                NaT  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "snapshot_calendar = (\n",
-    "    df[[\"snapshot_type\", \"snapshot_date\"]]\n",
-    "    .drop_duplicates()\n",
-    "    .sort_values([\"snapshot_type\", \"snapshot_date\"])\n",
-    ")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "403488a1-7e84-486d-ace7-211df04ab55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare current and previous frames\n",
     "\n",
-    "snapshot_calendar"
+    "# Current snapshot frame\n",
+    "current_df = df.copy()\n",
+    "\n",
+    "current_df = current_df.rename(columns={\n",
+    "    \"quantity\": \"quantity_curr\",\n",
+    "    \"cost_per_unit\": \"cost_per_unit_curr\",\n",
+    "    \"total_cost\": \"total_cost_curr\",\n",
+    "})\n",
+    "\n",
+    "## Previous snapshot frame\n",
+    "previous_df = df.rename(columns={\n",
+    "    \"snapshot_date\": \"snapshot_date_prev\",\n",
+    "    \"quantity\": \"quantity_prev\",\n",
+    "    \"cost_per_unit\": \"cost_per_unit_prev\",\n",
+    "    \"total_cost\": \"total_cost_prev\",\n",
+    "})[\n",
+    "    [\n",
+    "        \"material\",\n",
+    "        \"plant\",\n",
+    "        \"date\",\n",
+    "        \"snapshot_type\",\n",
+    "        \"snapshot_date_prev\",\n",
+    "        \"quantity_prev\",\n",
+    "        \"cost_per_unit_prev\",\n",
+    "        \"total_cost_prev\",\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Join current to previous snapshot\n",
+    "rca_base = current_df.merge(\n",
+    "    previous_df,\n",
+    "    left_on=[\n",
+    "        \"material\",\n",
+    "        \"plant\",\n",
+    "        \"date\",\n",
+    "        \"snapshot_type\",\n",
+    "        \"prev_snapshot_date\",\n",
+    "    ],\n",
+    "    right_on=[\n",
+    "        \"material\",\n",
+    "        \"plant\",\n",
+    "        \"date\",\n",
+    "        \"snapshot_type\",\n",
+    "        \"snapshot_date_prev\",\n",
+    "    ],\n",
+    "    how=\"left\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "82d3e8fd-1add-478d-bc17-067bf3a74aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(92589, 20)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f091ed-2669-4094-892c-98f44be1b5ff",
+   "id": "5a9795cd-7a5f-4d6e-8e61-76ec89dd3ab6",
    "metadata": {},
    "outputs": [],
    "source": []
